@@ -46,8 +46,8 @@ exits non zero. The maximum is 100. <P>
 <B>svwaitdown</B> returns 111 if the timeout
 <I>sec</I> was reached. 
 <H2><A NAME="sect5">See Also</A></H2>
-<I>svwaitup(8)</I>, <I>supervise(8)</I>, <I>svscan(8)</I>, <I>runit(8)</I>,
-<I>runit-init(8)</I> <P>
+<I>svwaitup(8)</I>, <I>runit(8)</I>, <I>runit-init(8)</I>, <I>runsvdir(8)</I>,
+<I>runsv(8)</I>, <I>supervise(8)</I>, <I>svscan(8)</I> <P>
  <I>http://smarden.org/runit/</I><BR>
   <I>http://cr.yp.to/daemontools.html</I><BR>
  
