@@ -73,10 +73,12 @@ returns 111 if the timeout
 was reached.
 .SH SEE ALSO
 svwaitup(8),
-supervise(8),
-svscan(8),
 runit(8),
-runit-init(8)
+runit-init(8),
+runsvdir(8),
+runsv(8),
+supervise(8),
+svscan(8)
 .P
  http://smarden.org/runit/
  http://cr.yp.to/daemontools.html
