@@ -84,10 +84,12 @@ increases the exit code by one and exits non zero. The maximum is 100.
 returns 111 on error.
 .SH SEE ALSO
 svwaitdown(8),
-supervise(8),
-svscan(8),
 runit(8),
-runit-init(8)
+runit-init(8),
+runsvdir(8),
+runsv(8),
+supervise(8),
+svscan(8)
 .P
  http://smarden.org/runit/
  http://cr.yp.to/daemontools.html
