@@ -1,6 +1,7 @@
 runit 0.5.4
 Wed, 25 Sep 2002 12:13:46 +0200
   * man/runsv.8, man/runsvdir.8: new.
+  * doc: use runsvdir/runsv instead of svscanboot/supervise.
 
 runit 0.5.3
 Tue, 24 Sep 2002 12:14:02 +0200
